alignment fix

--- a/views/dorms/main.css
+++ b/views/dorms/main.css
@@ -155,11 +155,6 @@ fieldset[disabled] .btn-purple.active {
     align-items: flex-start !important;
   }
 }
-@media only screen and (max-width: 532px) {
-  #about-button {
-    margin-top: 5px;
-  }
-}
 @media only screen and (max-width: 385px) {
   .navbar-brand img {
     height: 56px;
